src-tauri/tests/snapshots/cross_validation__xv_res_large_tokens.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: system
  id: r1
  content_length: 1
  content:
    - type: text
      text: "2.0s • in 1,234,567 • out 98,765"
  status: ~
  streaming: ~
