src-tauri/tests/snapshots/cross_validation__xv_sys_no_subtype.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: system
  id: s1
  content_length: 1
  content:
    - type: text
      text: System
  status: ~
  streaming: ~
