src-tauri/tests/snapshots/cross_validation__xv_user_multi_plain_text.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: user
  id: u1
  content_length: 1
  content:
    - type: text
      text: first
  status: ~
  streaming: ~
- role: user
  id: u2
  content_length: 1
  content:
    - type: text
      text: second
  status: ~
  streaming: ~
