src-tauri/tests/snapshots/cross_validation__xv_user_prompt_with_brace_content.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: user
  id: u1
  content_length: 1
  content:
    - type: text
      text: "{\"foo\":\"bar\"}"
  status: ~
  streaming: ~
