src-tauri/tests/snapshots/cross_validation__xv_user_prompt_wrapped.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: user
  id: u1
  content_length: 1
  content:
    - type: text
      text: hello assistant
  status: ~
  streaming: ~
